--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Ignore all markdown files except README.md
 *.md
 !README.md
+!documentation.md
 CUAD_v1/full_contract_pdf/*
 cuad_chroma_db/*
 **/__pycache__/
